--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- add meta theme and description and title -->
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Don't Laugh Challenge" />
+    <meta name="title" content="Don't Laugh Challenge" />
     <title>Joke Teller</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="./index.js"></script>
@@ -15,5 +19,7 @@
         </div>
         <button class="joke-btn">Get Another Joke</button>
     </section>
+
+    <footer>Designed with ♥️ by <a href="https://parthasarathimuduli.netlify.app/" target="_blank">&nbsp;Partha</a></footer>
 </body>
 </html>
